# nes-emulator

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-pages.yml  release-app.yml
core/: Cargo.toml
core/src/: lib.rs
scripts/: build-wasm.sh  prepare-rom-catalog.mjs  release.cjs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.vue  env.d.ts
web/src/components/: NesScreen.vue  RomStorePanel.vue  SettingsModal.vue
web/src/emulator/: platform.ts  runner.ts  settings.ts
web/src/store/: romCatalog.ts  romDownloader.ts  romLibrary.ts
