[package]
name = "nes-core"
version = "0.1.0"
edition = "2021"
description = "NES emulator core wrapped for WebAssembly (基于 takahirox/nes-rust)"

[lib]
# cdylib: 供 wasm-pack 产出 wasm;rlib: 便于本地 cargo test
crate-type = ["cdylib", "rlib"]

[dependencies]
# 直接 git 依赖核心库,免去 crates.io 版本对齐的麻烦
nes_rust = { git = "https://github.com/takahirox/nes-rust" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
